--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,18 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
-      - name: setup
+      - name: set-up
         uses: ocaml/setup-ocaml@v2
         with:
-          ocaml-version: "5.2.1"
-          opam-repository: "https://github.com/ocaml/opam-repository "
-          packages: "dune,alcotest"
+          ocaml-compiler: "5.2"
 
-      - name: build-and-test
-        run: |
-            dune build
-            dune test
+      - run: opam install . --deps-only --with-test
+
+      - run: |
+          for dir in */; do
+          if [ -f "$dir/dune-project" ]; then
+          opam exec -- dune build
+          opam exec -- dune runtest
+          fi
+          done
+
