--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
               cd "$dir"
               dune build
               dune test
+              exit_code=$?
+              if [$exit_code -neq 0]; then
+                exit $exit_code
+              fi
               cd ..
             fi
           done
