--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
 
       - name: setup
         run: |
+          pwd
           sudo apt update
           sudo apt install -y ocaml opam
           opam init --disable-sandboxing -y
@@ -24,8 +25,10 @@ jobs:
       - name: test
         run: |
           for dir in */; do
+            echo "%dir"
             if [ -f "$dir/dune-project" ]; then  
               cd "$dir"
+              pwd
               dune build
               dune test
               exit_code=$?
