--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,15 @@ jobs:
           opam init --disable-sandboxing -y
           eval $(opam env)
           opam install . --deps-only --with-test --yes
+          pwd
+          ls
 
       - name: test
         run: |
           for dir in */; do
-            echo "%dir"
+            echo "$dir"
+            ls
+            pwd
             if [ -f "$dir/dune-project" ]; then  
               cd "$dir"
               pwd
