--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,7 @@ jobs:
           sudo apt install -y ocaml opam
           opam init --disable-sandboxing -y
           eval $(opam env)
-          opam install dune
-          opam install alcotest
+          opam install . --deps-only --yes
 
       - name: test
         run: |
