--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,8 @@ jobs:
           sudo apt install -y ocaml opam
           opam init --disable-sandboxing -y
           echo 'eval $(opam env)' >> ~/.bashrc
-          opam install dune.3.19.0
-          which dune
+          apt install dune
           opam install . --deps-only --yes
-          which dune
 
       - run: |
           for dir in */; do
