--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,9 @@ jobs:
           sudo apt install -y ocaml opam
           opam init --disable-sandboxing -y
           eval $(opam env)
-          opam install dune.3.19.0
+          opam install dune --yes
           opam install . --deps-only --yes
+          dune --version
 
       - run: |
           for dir in */; do
