add full version of expression parser
commit messages:

add subtraction and division
add test for sub and div
add statement
add parentheses processing
rename test module and add some tests
major project structure refactoring
fix dependencies
simplify dependencies structure
add new tokens
rename some files and fix referencies

--- a/parser/parser/dune
+++ b/parser/parser/dune
@@ -1,9 +1,4 @@
 (library
- (name parse)
- (modules parse)
- (libraries lexer expression))
-
-(library
- (name expression)
- (modules expression)
+ (name parser)
+ (modules types parse_expression parse_condition parse_statement)
  (libraries lexer))
