add simple version of custom functions calling
commit messages:

add token 'call'
add parse_call
add tests for parse_call
make parse_program work with tokens instead of string
fix tests according to changes

--- a/parser/test/dune
+++ b/parser/test/dune
@@ -9,3 +9,8 @@
 (test
  (name test_program)
  (libraries alcotest parser lexer))
+
+(test
+ (name test_functions)
+ (libraries alcotest parser lexer))
+ 
