--- a/parser/test/dune
+++ b/parser/test/dune
@@ -3,14 +3,17 @@
  (libraries alcotest lexer))
 
 (test
- (name test_parser)
- (libraries alcotest parser lexer))
-
-(test
- (name test_program)
+ (name test_parse_to_program)
  (libraries alcotest parser lexer))
 
 (test
  (name test_functions)
  (libraries alcotest parser lexer))
  
+(test
+ (name test_condition)
+ (libraries alcotest parser lexer))
+
+(test
+ (name test_parse_expression)
+ (libraries alcotest parser lexer))
