minor style changes

--- a/parser/test/dune
+++ b/parser/test/dune
@@ -3,10 +3,6 @@
  (libraries alcotest lexer))
 
 (test
- (name test_parser)
- (libraries alcotest parser lexer))
-
-(test
  (name test_program)
  (libraries alcotest parser lexer))
 
@@ -14,3 +10,10 @@
  (name test_functions)
  (libraries alcotest parser lexer))
  
+(test
+ (name test_condition)
+ (libraries alcotest parser lexer))
+
+(test
+ (name test_parser)
+ (libraries alcotest parser lexer))
