--- a/test/dune
+++ b/test/dune
@@ -1,19 +1,19 @@
 (test
  (name test_lexer)
- (libraries alcotest lexer))
+ (libraries alcotest compiler))
 
 (test
  (name test_parse_to_program)
- (libraries alcotest parser lexer))
+ (libraries alcotest compiler))
 
 (test
  (name test_functions)
- (libraries alcotest parser lexer))
+ (libraries alcotest compiler))
  
 (test
- (name test_condition)
- (libraries alcotest parser lexer))
+ (name test_comparison)
+ (libraries alcotest compiler))
 
 (test
  (name test_parse_expression)
- (libraries alcotest parser lexer))
+ (libraries alcotest compiler))
