--- a/test/dune
+++ b/test/dune
@@ -11,7 +11,7 @@
  (libraries alcotest compiler))
  
 (test
- (name test_comparison)
+ (name test_condition)
  (libraries alcotest compiler))
 
 (test
