--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -5,15 +5,18 @@ on:
     branches: '**'
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     name: tests
+    container:
+      image: riscv64/riscv-tools:latest
 
     steps:
       - uses: actions/checkout@v4
 
       - run: |
           sudo apt update
+          spike --version
           sudo apt install -y ocaml opam spike
           opam init --disable-sandboxing -y
           eval $(opam env)
