--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,16 +8,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     name: tests
-    container:
-      image: riscv64/riscv-tools:latest
 
     steps:
       - uses: actions/checkout@v4
 
       - run: |
           sudo apt update
-          spike --version
-          sudo apt install -y ocaml opam spike
+          sudo apt install -y ocaml opam qemu qemu-user
           opam init --disable-sandboxing -y
           eval $(opam env)
           opam install dune --yes
