--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -18,6 +18,7 @@ jobs:
           opam init --disable-sandboxing -y
           eval $(opam env)
           opam install dune --yes
+          opam install alcotest --yes
           dune build
           export REPO_ROOT="$PWD"
           ./test/backend/test.sh
