--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,11 @@ jobs:
 
       - run: |
           sudo apt update
-          sudo apt install -y ocaml opam
+          sudo apt install -y ocaml opam qemu-user binutils-riscv64-unknown-elf
           opam init --disable-sandboxing -y
           eval $(opam env)
-          opam install dune --yes
-          opam install alcotest --yes
+          opam install dune alcotest ppx_expect --yes
           dune build
+          export REPO_ROOT="$PWD"
+          export EMULATOR="qemu-riscv64"
           dune test
