--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
           eval $(opam env)
           opam install dune --yes
           opam install alcotest --yes
+          opam install ppx_expect --yes
           opam install stdio --yes
           dune build
           export REPO_ROOT="$PWD"
