--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,8 @@ jobs:
           sudo apt install -y ocaml opam qemu-user binutils-riscv64-unknown-elf
           opam init --disable-sandboxing -y
           eval $(opam env)
-          opam install dune --yes
-          opam install alcotest --yes
-          opam install ppx_expect --yes
-          opam install stdio --yes
+          opam install dune alcotest ppx_expect --yes
           dune build
           export REPO_ROOT="$PWD"
+          export EMULATOR="qemu-riscv64"
           dune test
