redesign type system and parser and add inferencer
commit messages:

delete useless function
add type binary_operation instead of multiple expression variants
fix lib functions according to changes
fix tests according to changes
add type boolean_expression instead of variants of condition
fix libs according to changes
fix tests according to changes
some style fixes
delete token for
style fixes and optimizations in backend.ml
minor fixes in app.ml
add app.mli
rename exception
add backend.mli
fix parse_call_stmt
minor style fix
add test for parse_call_stmt
expand type system
backend refactoring
add non-working ci-breaking version of inferencer
add tokens for true and false
rename functions according to changes
redesign the entire type system
temporarily copy lexer files (for the new version of the parser)
add new version of parser based on redesigned type system
add some tests for parser
add dune files
move new version of parser to lib and remove temporary files
fix tests (as much as possible for now)
fix dune files according to changes
get rid of some copy-paste
add parsing of functions calling
add call to statement type and expession type
add simple version of type_checker
add test for type checker
fix dune files
add match_binop_type and match_unop_type to fix infer_expression
add try_tokenize_string_literal
add token STR
add test for STR
fix dune file according to changes
add tests for type checker
add str in parse_expression
replace exceptions to Ok/Error in lexer
replace exceptions with Ok/Error in token.ml
fix lexer.mli according to changes
add error type to types.ml
replace exceptions with Ok/Error in parser.ml
fix dune files according to changes
replace alcotest with ppx_expect (for lexer)
fix type_checker tests according to changes
add parser.mli
squash all parser tests into one module
minor fix in type_checker
add ppx_deriving to ci.yml to fix ci
add parse_call
fix tests according to changes
add test for type checker
add tokens for cat, or, and
delete call f

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           sudo apt install -y ocaml opam qemu-user binutils-riscv64-unknown-elf
           opam init --disable-sandboxing -y
           eval $(opam env)
-          opam install dune alcotest ppx_expect --yes
+          opam install dune alcotest ppx_expect ppx_deriving --yes
           dune build
           export REPO_ROOT="$PWD"
           export EMULATOR="qemu-riscv64"
