--- a/lib/dune
+++ b/lib/dune
@@ -1,3 +1,3 @@
 (library
  (name compiler)
- (modules token lexer parser types backend app))
+ (modules token lexer parser types inferencer backend app))
