--- a/test/backend/dune
+++ b/test/backend/dune
@@ -1,7 +1,7 @@
-(library
- (name backend)
- (modules simple)
- (preprocess
-  (pps ppx_expect))
- (inline_tests)
- (libraries base compiler))
+;(library
+;(name backend)
+;(modules simple)
+;(preprocess
+;(pps ppx_expect))
+;(inline_tests)
+;(libraries base compiler))
