--- a/test/frontend/dune
+++ b/test/frontend/dune
@@ -1,6 +1,6 @@
 (library
  (name frontend_tests)
- (modules lexer)
+ (modules lexer parser)
  (libraries base stdio ppx_expect compiler)
  (preprocess
   (pps ppx_expect ppx_deriving.show))
