fix tests for inferencer according to changes

--- a/test/inferencer/dune
+++ b/test/inferencer/dune
@@ -2,6 +2,6 @@
  (name inferencer)
  (modules type_checker)
  (preprocess
-  (pps ppx_expect))
+  (pps ppx_expect ppx_deriving.show))
  (inline_tests)
  (libraries base compiler))
