update compiler before presentation
commit messages:

add Type_int case to compile_expressions
add generator mli
add some simple tests for generator
fix dune files
minor code refactoring in generamor.ml
add test for generator
get app.ml and stdlib.s back
add simple version of function calling in inferencer
add compile_call and print in generator.ml
fix test for generator
fix dune file
fix bug in inferencer
minor changes according to fixes
add Typed_while and Typed_ite compilation
add some tests for generator
minor style changes
bug fix in compile_program
add some functions to compile and print Type_str
minor changes in stdlib.s
move all tests to compiler/test
fix dune files
add Type_bool to print
add test for generator
move code from stdlib.s to generator.ml
replace failwith with named exceptions
reorder functions in inferencer.ml
minor style fixes in several modules
try to fix ci
change test to check if ci crashes
update status
fix bug in inferencer
add tests on fixed bug
add console application
add .opam file
fix dune file
update tests
move asm code to separated module
fix generator.ml according to changes
fix dune file
add .ocamlformat
fix style in all modules using ocamlformat
add headers and comments
add test
add define
add test for define
add infer_definition
add some inferencer errors
add test for definition
fix definition parsing
update tests
add ra to asm
add compilation for Typed_definition
update tests
fix compilation of Typed_definition
minor changes
fix tests
minor fix
rename test
remove the need to export EMULATOR
style fixes
bug fix
style formating
update tests
fix bug
minor changes
update tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,9 @@ jobs:
       - run: |
           sudo apt update
           sudo apt install -y ocaml opam qemu-user binutils-riscv64-unknown-elf
-          opam init --disable-sandboxing -y
+          opam init -y
           eval $(opam env)
           opam install dune alcotest ppx_expect ppx_deriving --yes
           dune build
-          export REPO_ROOT="$PWD"
           export EMULATOR="qemu-riscv64"
           dune test
